--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.7",
+    "typescript": "5.0.4"
   }
 }
