--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.22.1",
     "headlessui": "^0.0.0",
     "heroicons": "^2.0.18",
+    "leaflet": "^1.9.4",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
