--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
-    "firebase": "^9.22.1",
-    "headlessui": "^0.0.0",
-    "heroicons": "^2.0.18",
+    "autoprefixer": "10.4.14",
     "next": "13.4.4",
+    "postcss": "8.4.24",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@types/node": "20.2.5",
     "@types/react": "18.2.7",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "eslint": "^8.41.0",
+    "typescript": "^5.0.4"
   }
 }
