--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
+    "cors": "^2.8.5",
+    "firebase": "^9.22.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/node": "20.2.5",
+    "@types/node-fetch": "^2.6.4",
     "@types/react": "18.2.7",
     "eslint": "^8.41.0",
     "typescript": "^5.0.4"
