--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@opengovsg/sgid-client": "^2.0.0",
     "autoprefixer": "10.4.14",
     "cors": "^2.8.5",
     "firebase": "^9.22.1",
