--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@opengovsg/sgid-client": "^2.0.0",
     "autoprefixer": "10.4.14",
     "cors": "^2.8.5",
+    "eslint-config-next": "^13.4.4",
     "firebase": "^9.22.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
