--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@opengovsg/sgid-client": "^2.0.0",
     "autoprefixer": "10.4.14",
+    "cookies-next": "^2.1.1",
     "cors": "^2.8.5",
     "firebase": "^9.22.1",
     "next": "13.4.4",
