--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,11 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/pages/indexx.js", "components/Layout.js", "src/pages/profilejs", "src/pages/explore.js", "src/pages/events.js", "src/pages/contribute.js", "src/pages/contact.js"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "awesomeTypescriptLoaderOptions": {
+    "useWebpackText": true,
+    "useTranspileModule": true,
+    "doTypeCheck": true,
+    "forkChecker": true
+  },
 }
