--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "eslint-config-next": "^13.4.4",
     "firebase": "^9.22.1",
+    "lottie-react": "^2.4.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "^18.2.0",
