--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@opengovsg/sgid-client": "^2.0.0",
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
     "cors": "^2.8.5",
     "eslint-config-next": "^13.4.4",
