--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.11.2",
